# oracle-ai-rag-lab

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  GEMINI.md  LICENSE  README.md  pyproject.toml  requirements.txt
.agent/: PROJECT.md  PROJECT.template.md  README.md  SESSION.md  onboarding.complete
.agent/rules/: antigravity-overview.md  codegraph.md  loop-library.md  ontosight.md  security.md  ui-ux-pro-max.md
.agents/agents/: backend.md  business-analyst.md  code-reviewer.md  copywriter-seo.md  frontend.md  project-manager.md  qa.md  security-auditor.md  systems-architect.md  test-engineer.md  ui-ux-designer.md
.agents/references/: codegraph.md
.agents/workflows/: publish-npm.md
.claude/: CLAUDE.md
.claude/agents/: frontend.md
.claude/references/: ontosight.md
.claude/rules/: codegraph.md  loop-library.md  ontosight.md  security.md  ui-ux-pro-max.md
.cursor/: CURSOR.md  mcp.json
.cursor/agents/: project-manager.md  qa.md  security-auditor.md  ui-ux-designer.md
.cursor/references/: codegraph.md  loop-library.md
.cursor/rules/: codegraph.mdc  cursor-overview.mdc  loop-library.mdc  ontosight.mdc  security.mdc  ui-ux-pro-max.mdc
.github/workflows/: ci.yml
.kiro/: KIRO.md
.kiro/agents/: backend.md  business-analyst.md  code-reviewer.md  copywriter-seo.md  systems-architect.md  test-engineer.md
.kiro/commands/: publish-npm.md
.kiro/references/: codegraph.md
.kiro/steering/: codegraph.md  kiro-overview.md  loop-library.md  (+3 more)
python/: 01_load_oracle_dba_knowledge.py  02_vector_search_test.py  03_rag_chatbot.py  db.py  test_embedding.py  test_pgvector.py
sql/: schema.sql
tasks/: todo.md  todo.template.md
(+77 files in other folders)
